2016-12-27  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 7.0.2.

2016-12-27  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the gsa 7.0.1 release.

	* CHANGES: Updated.

2016-12-20  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r27020.

	* src/html/classic/help.xsl (feed_management.html): Use correct command
	"get_feeds" in "Jump to dialog" link.

2016-12-20  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r27018.

	* src/html/classic/omp.xsl (delete-icon): Set the reload type for the
	"Delete User" button to "next".

2016-12-20  Michael Wiegand <michael.wiegand@greenbone.net>

	Backport r26966.

	* src/html/classic/os.xml: Match "cpe:/o:linux:linux_kernel" as well
	for Linux Kernel.

2016-12-19  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r26985.

	* src/html/classic/omp.xsl (get_system_reports_response): Show slave
	selection only if there are slave scanners to select from.

2016-12-19  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r26981.

	* src/gsad_omp.c (save_user_omp): Check *modified_user instead of
	old_login in test for setting logout_user.

2016-12-19  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r26978.

	* src/gsad_omp.c (save_user_omp): Check if old_login is not NULL before
	comparing to login in test for setting logout_user.

2016-12-19  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r26976.

	* src/html/classic/wizard.xsl (quick-task-wizard, modify-task-wizard):
	Hide schedule option if the user does not have the create_schedule
	or get_schedules permission.

2016-12-14  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Backport r26934.

	* README: Updated text and removed the detailed output of --help which
	it too easily outdated here.

	* src/gsad.c: Add all licenses to the Doxygen documentation.

	* COPYING: Fix filename.

2016-12-12  Matthew Mundell <matthew.mundell@greenbone.net>
