@@ -1,3 +1,10 @@
+2017-01-16  Timo Pollmeier <timo.pollmeier@greenbone.net>
+
+	Backport r27225.
+
+	* src/gsad_omp.c (new_permissions): Test if related is NULL before
+	trying to iterate over table of related resources.
+
 2016-12-27  Michael Wiegand <michael.wiegand@greenbone.net>
 
 	Post release version bump.
